--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,12 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+
+[dependencies.sdl2]
+version = "0.36.0"
+features = ["image"]
+
 [dependencies]
-sdl2 = "0.36.0"
+
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
