--- a/config.json
+++ b/config.json
@@ -8,7 +8,8 @@
             "command": [
                 "ls", "-A"
             ],
-            "color" : [0,0,255]
+            "color" : [0,0,255],
+            "image": "block.png"
         }
     ],
     "player": {
