made block animation configurable

--- a/config.json
+++ b/config.json
@@ -9,7 +9,8 @@
                 "ls", "-A"
             ],
             "color" : [0,0,255],
-            "image": "block.png"
+            "image": "block.png",
+            "animation" : 50
         }
     ],
     "player": {
